--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 .navbar-custom{
     background: #f8f8f8;
     box-shadow: 0px 0px 60px 0px rgba(0, 0, 0, 0.07000000000000001);
-    border-bottom: none;
+    border: none;
+    border-radius: 0;
     margin-bottom: 0;
 
 }
@@ -25,13 +26,13 @@
 .intro-message > h1, .intro-message > h3 {
     text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
 }
-.btn-custom{
+.btn-custom, .plans-pricing .btn-primary, .plans-pricing .btn-primary:hover{
     background-color: transparent;
     border: 2px solid #b98a2c !important;
     padding: 10px 30px;
     color: #b98a2c;
 }
-.btn-custom:hover{
+.btn-custom:hover, .btn-primary:hover{
     background-color: #b98a2c;
     color: white;
 }
@@ -85,6 +86,9 @@
     font-size: 24px;
     margin-right: 10px;
 }
+.fb-page h3{
+    line-height: 1.4;
+}
 
 footer{
     padding: 80px 0;
@@ -102,4 +106,76 @@ footer a:hover{
     font-size: 16px;
     font-weight: 300;
     margin-top: 30px;
+}
+
+.plans-pricing-page .navbar-custom{
+    border-bottom: 1px solid #ccc;
+}
+.plans-pricing-page .page-title{
+    padding: 50px 0 0 0;
+    text-align: center;
+}
+.plans-pricing{
+    padding: 30px 0 80px 0;
+}
+.plans-pricing h2{
+    margin-bottom: 30px;
+}
+.plans .title{
+    color: #b98a2c;
+}
+.plans-desc{
+    margin: 30px 0;
+}
+.plans-desc p{
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1.8;
+    padding: 0 24px;
+}
+
+.plans-pricing .btn{
+    font-size: 18px;
+    font-weight: bold;
+}
+.plans-time{
+    margin-bottom: 30px;
+}
+.plans-pricing .btn-primary{
+    background-color: #b98a2c;
+    color: white;
+}
+
+.membership-perks{
+    padding: 80px 0 50px 0;
+    background-color: #f8f8f8;
+}
+.membership-perks .table-responsive{
+    margin-top: 40px;
+}
+.table>tbody>tr>td, .table>tbody>tr>th{
+    border:none;
+}
+tr, td, th{
+    font-size: 16px;
+    font-weight: 300;
+    margin:0 !important;
+    padding: 0 !important;
+}
+th{
+    width: 33.333333333%;
+    vertical-align: middle !important;
+}
+td{
+    width: 16.6666666667%;
+}
+td h4, th h4{
+    color: #b98a2c;
+}
+
+.perk td{
+    padding: 20px 0 !important;
+}
+.training td{
+    width: 66.666666667%
 }
