--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(http://placehold.it/1920x1080) no-repeat center center fixed;
+    background: linear-gradient(rgba(255,255,255,0.6),rgba(255,255,255,0.6)), url(../img/banner.jpg) no-repeat center center fixed;
     background-size: cover;
 }
 .intro-message {
@@ -65,7 +65,10 @@
 
 .desc{
     background-color: #fbf9f4;
-    padding: 10% 50px;
+    padding: 0 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .desc h2{
     color: #b98a2c;
